2007-08-24  Chris Lumens  <clumens@redhat.com>

	* ksvalidator/validator:  Don't leave downloaded ks files on the
	system if pykickstart hits a traceback.

2007-08-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/repo.py (F8_RepoData, F8_Repo):  Add support
	for the --priority, --includepkgs, and --excludepkgs options.
	* pykickstart/handlers/control.py:  Use F8_RepoData and F8_Repo for
	Fedora 8.

2007-08-22  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/reboot.py (FC6_Reboot.__str__):  Fix newline at
	end of output (#253562).

2007-08-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/options.py (KSOption._check_string):  Fix type checking
	of string types.

2007-08-09  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/options.py (KSOption._check_string):  Add a method to
	check string values, since optparse will consume the next argument if
	an argument that requires a value does not specify one (#251318).

	* pykickstart/*, validator/ksvalidator, pykickstart.spec:  Add license
	boilerplate, clarify as GPLv2.

2007-08-02  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* po/*:  Update translation files.

2007-07-31  Chris Lumens  <clumens@redhat.com>

	* validator/ksvalidator:  Don't traceback if there's not yet a
	processedFile.  preprocessKickstart is no longer in any class.

2007-07-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/network.py:  Change --class to --dhcpclass in
	all parse methods (#248912).

2007-07-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Require rhpl (#248953).  New release.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-07-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (_preprocessStateMachine, preprocessFromString,